--- a/index.html
+++ b/index.html
@@ -9,10 +9,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
+<div class="container vh-100">
+    <div class="row h-100 align-items-center">
+        <div class="col-8 h-75 p-0">
+            
+        </div>
+        <div class="col-4 h-75 d-flex flex-column justify-content-between position-relative p-0">
+            
+             <div class="box-up">
+                <i class="far fa-arrow-alt-circle-up position-absolute top-0 start-50 translate-middle-x fs-3"></i>
+             </div>
+             <div class="box-down">
+                <i class="far fa-arrow-alt-circle-down position-absolute bottom-0 start-50 translate-middle-x fs-3"></i>
+             </div>
+        </div>
+    </div>
+</div>
     <script src="js/script.js"></script>
 </body>
 </html>
