--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <div class="col-4 h-75 d-flex flex-column justify-content-between position-relative p-0">
             
              <div class="box-up">
-                <i class="far fa-arrow-alt-circle-up position-absolute top-0 start-50 translate-middle-x fs-3"></i>
+                <i id="up" class="far fa-arrow-alt-circle-up position-absolute top-0 start-50 translate-middle-x fs-3"></i>
              </div>
              <div class="box-down">
-                <i class="far fa-arrow-alt-circle-down position-absolute bottom-0 start-50 translate-middle-x fs-3"></i>
+                <i id="down" class="far fa-arrow-alt-circle-down position-absolute bottom-0 start-50 translate-middle-x fs-3"></i>
              </div>
         </div>
     </div>
