--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     <title>Document</title>
 </head>
 <body>
-<div class="container vh-100">
-    <div class="row h-100 align-items-center">
-        <div class="col-8 h-75 p-0">
-            
-        </div>
-        <div class="col-4 h-75 d-flex flex-column justify-content-between position-relative p-0">
-            
-             <div class="box-up">
-                <i id="up" class="far fa-arrow-alt-circle-up position-absolute top-0 start-50 translate-middle-x fs-3"></i>
-             </div>
-             <div class="box-down">
-                <i id="down" class="far fa-arrow-alt-circle-down position-absolute bottom-0 start-50 translate-middle-x fs-3"></i>
-             </div>
+    <div class="container-fluid bg-grey">
+        <div class="container vh-100 w-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-8 h-75 p-0"></div>
+                <div class="col-4 h-75 d-flex flex-column justify-content-between position-relative p-0">
+                     <div class="box-up">
+                        <i id="up" class="far fa-arrow-alt-circle-up position-absolute top-0 start-50 translate-middle-x fs-3">
+                        </i>
+                     </div>
+                     <div class="box-down">
+                        <i id="down" class="far fa-arrow-alt-circle-down position-absolute bottom-0 start-50 translate-middle-x fs-3"></i>
+                     </div>
+                </div>
+            </div>
         </div>
     </div>
-</div>
     <script src="js/script.js"></script>
 </body>
 </html>
